--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ python = "^3.10"
 gql = {extras = ["all"], version = "^3.4.0"}
 Pygments = "^2.13.0"
 falcon = "^3.1.1"
+black = {extras = ["d"], version = "^22.10.0"}
+uvicorn = "^0.20.0"
+syncer = "^1.3.0"
+gunicorn = "^20.1.0"
+waitress = "^2.1.2"
 
 
 [build-system]
